	* arch/arm/src/sam34/chip/sam4l_pm.h:  Add header file for SAM4L
	  Power Management.  Leveraged from AVR32 (2013-6-5).
	* arch/arm/src/sam34/sarm4l_clockconfig.c:  SAM4L clock configuration
	  logic (leveraged from AVR32).
	* nuttx/arch/arm/src/sam34/sam4l_periphclks.c/h:  Add common
	  logic to enabled/disable SAM4L peripheral clocking (2013-6-5).
	* nuttx/arch/arm/src/sam34/chip/sam4l_bpm.h and sam4l_scif.h:  Add
	  register definitions for the SAM4L BMP and SCIF blocks (2013-6-6).
	* nuttx/arch/arm/src/sam34/sam4l_clockconfig.c:  Now selects an
	  optimal power scaling mode (2013-6-6).
	* nuttx/arch/arm/src/stm32/stm32_serial.c and nuttx/include/termios.h:
	  Change for hardware flow control support for STM32. It also fixes
	  incorrect operation of USART2 and UART5 in current master.  Submitted
	  by Lorenz Meier but includes changes by Mike Smith (2013-6-6).
	* nuttx/arch/arm/src/stm32/stm32_otgfshost.c:  A backward conditional
	  prevent detection of disonnection events.  Reported by Scott (2013-6-6).
	* nuttx/arch/arm/src/sam34/chip/sam4l_bscif.h: Add registers definitions
	  for the SAM4L BSCIF module (2013-6-6).
	* nuttx/arch/arm/src/sam34/sam4l_clockconfig.c and chip/sam4l_wdt.h:
	  Finally finished the SAM4L clock configuration logic; Added a
	  WDT register definition header file (2013-6-8).
	* nuttx/arch/arm/src/sam34/chip/sam4l_usart.h and sam4l_picouart.h:
	  Add UART/USART register defintion files for the SAM4L (2013-6-8).
	* arm/src/sam34/chip/sam3u_periphclks.h:  More macros and definitions
	  to generalize peripheral clocking and to hide differences between
	  the SAM3U and the SAM4L (2013-6-8).
	* configs/sam4l-xplained/ostest:  The SAM4L now passed the OS test
	  (2013-6-9).
	* configs/sam4l-xplained/nsh:  Added an NSH configuration for the
	  SAM4L Xplained Pro board (2013-6-9).
	* configs/sam4l-xplained/src/sam_cxxinitialize.c:  Added C++ support
	  to the SAM4L Xplained Pro board configuration (2013-6-9).