@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: May 29, 2013</p>
+      <p>Last Updated: June 9, 2013</p>
     </td>
   </tr>
 </table>
@@ -1578,7 +1578,7 @@
       <li><a href="#arm926ejs">ARM926EJS</a> (3) </li>
       <li><a href="#armcortexm0">ARM Cortex-M0/M0+</a> (2)</li>
       <li><a href="#armcortexm3">ARM Cortex-M3</a> (19)</li>
-      <li><a href="#armcortexm4">ARM Cortex-M4</a> (7)</li>
+      <li><a href="#armcortexm4">ARM Cortex-M4</a> (8)</li>
     </ul>
   <li>Atmel AVR
     <ul>
@@ -1640,6 +1640,7 @@
       <li><a href="#avrat90usbxxx">AVR AT90USB64x and AT90USB6128x</a> <small>(8-bit AVR)</small></li>
       <li><a href="#at32uc3bxxx">AVR32 AT32UC3BXXX</a> <small>(32-bit AVR32)</small></li>
       <li><a href="#at91sam3u">Atmel AT91SAM3U</a> <small>(ARM Cortex-M3)</small></li>
+      <li><a href="#at91sam4l">Atmel AT91SAM4L</a> <small>(ARM Cortex-M4)</small></li>
     </ul>
   </li>
   <li>Freescale
@@ -2950,9 +2951,59 @@ nsh>
     <ul>
       <p>
         <b>STATUS:</b>
-        As of this writing, the basic port is code complete and fully verified configurations exit for the basic NuttX OS test and for the NuttShell <a href="http://www.nuttx.org/Documentation/NuttShell.html">NSH</a>).
+        As of this writing, the basic port is code complete and fully verified configurations exist for the basic NuttX OS test and for the NuttShell <a href="http://www.nuttx.org/Documentation/NuttShell.html">NSH</a>).
         The first fully functional LM4F120 LaunchPad port was released in NuttX-6.27.
       </p>
+    </ul>
+  </td>
+</tr>
+<tr>
+  <td><br></td>
+  <td><hr></td>
+</tr>
+<tr>
+  <td><br></td>
+  <td>
+    <p>
+      <a name="at91sam4l"><b>Atmel AT91SAM4L</b>.</a>
+      This port uses the Atmel SAM4L Xplained Pro development board.
+      This board features the ATSAM4LC4C MCU with 256KB of FLASH and 32KB of internal SRAM.
+    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        As of this writing, the basic port is code complete and fully verified configurations exist for the basic NuttX OS test and for the NuttShell <a href="http://www.nuttx.org/Documentation/NuttShell.html">NSH</a>).
+        The first fully functional LM4F120 LaunchPad port was released in NuttX-6.28.
+      </p>
+      <p>
+        <b>Memory Usage</b>.
+        The ATSAM4LC4C comes in a 61004-pin package and has 256KB FLASH and 32KB of SRAM.
+        Below is the current memory usage for the NSH configuration (June 9, 2013).
+        This is <i>not</i> a minimal implementation, but a full-featured NSH configuration.
+      </p>
+      <p>
+        Static memory usage can be shown with <code>size</code> command:
+      </p>
+      <ul><pre>
+$ size nuttx
+   text    data     bss     dec     hex filename
+  43572     122    2380   46074    b3fa nuttx
+</pre></ul>
+      <p>
+        NuttX, the NSH application, and GCC libraries use 42.6KB of FLASH leaving 213.4B of FLASH (83.4%) free from additional application development.
+        Static SRAM usage is about 2.3KB (&lt;7%) and leaves 29.7KB (92.7%) available for heap at runtime.
+      </p>
+        SRAM usage at run-time can be shown with the NSH <code>free</code> command.
+        This runtime memory usage includes the static memory usage <i>plus</i> all dynamic memory allocation for things like stacks and I/O buffers:
+      <ul><pre>
+NuttShell (NSH) NuttX-6.28
+nsh> free
+             total       used       free    largest
+Mem:         29232       5920      23312      23312
+</pre></ul>
+    <p>
+      You can see that 22.8KB (71.1%) of the SRAM heap is staill available for further application development while NSH is running.
+    </p>
     </ul>
   </td>
 </tr>
